air pollution detection

--- a/pollution_data_nairobi.ipynb
+++ b/pollution_data_nairobi.ipynb
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8be0c4cb",
+   "id": "3ed2c92a",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "d8b29769",
+   "id": "49f2a32d",
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4ec4dde0",
+   "id": "c67e1c06",
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e4805622",
+   "id": "a71cf9f2",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4d59e575",
+   "id": "c30483b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3139b915",
+   "id": "6ac71e40",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5166744b",
+   "id": "bee6ea03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2605b641",
+   "id": "0a05191d",
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "109a5fbd",
+   "id": "36834fba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6a3b8123",
+   "id": "c38f46bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "396d63c3",
+   "id": "568f268a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f31de733",
+   "id": "a913c1f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1490,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "29a4ac51",
+   "id": "2112f8e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1ab8c7c3",
+   "id": "75a7e201",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3427912c",
+   "id": "b39d0abb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0fab6333",
+   "id": "8b63b3a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5b5703a5",
+   "id": "42a5cf85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0c4eef94",
+   "id": "a1658aa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1554,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "656cc438",
+   "id": "ec305dbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,7 +1572,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ca928e64",
+   "id": "9dc37c85",
    "metadata": {},
    "outputs": [
     {
@@ -2432,7 +2432,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "ad0f8720",
+   "id": "de04ff08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2442,7 +2442,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f05d5176",
+   "id": "bda378c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2452,7 +2452,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a9b4baed",
+   "id": "fab112ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2463,7 +2463,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c62b1bb7",
+   "id": "571f91da",
    "metadata": {},
    "outputs": [
     {
@@ -2494,7 +2494,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "d4e88754",
+   "id": "4733371e",
    "metadata": {},
    "outputs": [
     {
@@ -2512,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a06a020c",
+   "id": "fcb3ce76",
    "metadata": {},
    "outputs": [
     {
@@ -2533,7 +2533,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b9b63ff1",
+   "id": "c59db639",
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "193f6686",
+   "id": "a72053f8",
    "metadata": {},
    "outputs": [
     {
@@ -2584,7 +2584,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4f61d351",
+   "id": "bc8690f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2594,7 +2594,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0081b164",
+   "id": "15cc8ef0",
    "metadata": {},
    "outputs": [
     {
@@ -2615,7 +2615,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "956018f9",
+   "id": "de92a90b",
    "metadata": {},
    "outputs": [
     {
@@ -2647,7 +2647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f4e4bc7",
+   "id": "dbfd6446",
    "metadata": {},
    "source": [
     "# Predicting on a new single Value"
@@ -2656,7 +2656,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "f94c8473",
+   "id": "3e0692b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2666,7 +2666,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "761a00e7",
+   "id": "c38eb802",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2676,7 +2676,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "0fef45cb",
+   "id": "c0b2903b",
    "metadata": {},
    "outputs": [
     {
@@ -2703,8 +2703,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "6e7f50a4",
+   "execution_count": 82,
+   "id": "ca4b0187",
    "metadata": {},
    "outputs": [
     {
@@ -2746,130 +2746,123 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>155857</th>\n",
+       "      <th>0</th>\n",
        "      <td>2</td>\n",
-       "      <td>-1.2629</td>\n",
-       "      <td>36.8032</td>\n",
-       "      <td>473.98</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.14</td>\n",
-       "      <td>32.90</td>\n",
-       "      <td>2.71</td>\n",
-       "      <td>12.97</td>\n",
-       "      <td>30.57</td>\n",
-       "      <td>8.36</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>12</td>\n",
-       "      <td>31</td>\n",
+       "      <td>-1.2837</td>\n",
+       "      <td>36.7494</td>\n",
+       "      <td>580.79</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>5.10</td>\n",
+       "      <td>42.92</td>\n",
+       "      <td>6.32</td>\n",
+       "      <td>9.98</td>\n",
+       "      <td>21.97</td>\n",
+       "      <td>6.14</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>155858</th>\n",
-       "      <td>2</td>\n",
-       "      <td>-1.2629</td>\n",
-       "      <td>36.8032</td>\n",
-       "      <td>500.68</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.01</td>\n",
-       "      <td>32.19</td>\n",
-       "      <td>2.53</td>\n",
-       "      <td>14.83</td>\n",
-       "      <td>34.42</td>\n",
-       "      <td>8.23</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>12</td>\n",
-       "      <td>31</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.2837</td>\n",
+       "      <td>36.7494</td>\n",
+       "      <td>554.09</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>5.40</td>\n",
+       "      <td>39.34</td>\n",
+       "      <td>6.91</td>\n",
+       "      <td>7.78</td>\n",
+       "      <td>18.73</td>\n",
+       "      <td>6.46</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>155859</th>\n",
-       "      <td>2</td>\n",
-       "      <td>-1.2629</td>\n",
-       "      <td>36.8032</td>\n",
-       "      <td>514.03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.76</td>\n",
-       "      <td>32.19</td>\n",
-       "      <td>2.32</td>\n",
-       "      <td>15.59</td>\n",
-       "      <td>35.52</td>\n",
-       "      <td>7.60</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>12</td>\n",
-       "      <td>31</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.2837</td>\n",
+       "      <td>36.7494</td>\n",
+       "      <td>494.00</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>5.40</td>\n",
+       "      <td>36.12</td>\n",
+       "      <td>6.91</td>\n",
+       "      <td>5.88</td>\n",
+       "      <td>15.08</td>\n",
+       "      <td>6.21</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>155860</th>\n",
-       "      <td>2</td>\n",
-       "      <td>-1.2629</td>\n",
-       "      <td>36.8032</td>\n",
-       "      <td>487.33</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.37</td>\n",
-       "      <td>32.19</td>\n",
-       "      <td>2.09</td>\n",
-       "      <td>13.91</td>\n",
-       "      <td>32.12</td>\n",
-       "      <td>6.90</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>12</td>\n",
-       "      <td>31</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.2837</td>\n",
+       "      <td>36.7494</td>\n",
+       "      <td>447.27</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>4.63</td>\n",
+       "      <td>34.69</td>\n",
+       "      <td>5.96</td>\n",
+       "      <td>4.63</td>\n",
+       "      <td>12.55</td>\n",
+       "      <td>5.70</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>155861</th>\n",
-       "      <td>2</td>\n",
-       "      <td>-1.2629</td>\n",
-       "      <td>36.8032</td>\n",
-       "      <td>427.25</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.43</td>\n",
-       "      <td>33.26</td>\n",
-       "      <td>1.74</td>\n",
-       "      <td>10.80</td>\n",
-       "      <td>26.73</td>\n",
-       "      <td>5.76</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>12</td>\n",
-       "      <td>31</td>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.2837</td>\n",
+       "      <td>36.7494</td>\n",
+       "      <td>403.88</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>31.83</td>\n",
+       "      <td>4.83</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>10.23</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        air_quality_index      lat      lon  CO_conc  NO_conc  NO2_conc  \\\n",
-       "155857                  2  -1.2629  36.8032   473.98      0.0      5.14   \n",
-       "155858                  2  -1.2629  36.8032   500.68      0.0      5.01   \n",
-       "155859                  2  -1.2629  36.8032   514.03      0.0      4.76   \n",
-       "155860                  2  -1.2629  36.8032   487.33      0.0      4.37   \n",
-       "155861                  2  -1.2629  36.8032   427.25      0.0      3.43   \n",
+       "   air_quality_index      lat      lon  CO_conc  NO_conc  NO2_conc  O3_conc  \\\n",
+       "0                  2  -1.2837  36.7494   580.79     0.53      5.10    42.92   \n",
+       "1                  1  -1.2837  36.7494   554.09     0.41      5.40    39.34   \n",
+       "2                  1  -1.2837  36.7494   494.00     0.34      5.40    36.12   \n",
+       "3                  1  -1.2837  36.7494   447.27     0.33      4.63    34.69   \n",
+       "4                  1  -1.2837  36.7494   403.88     0.30      3.98    31.83   \n",
        "\n",
-       "        O3_conc  SO2_conc  fine_prtcls  coarse_prtcls  ammonia  year  month  \\\n",
-       "155857    32.90      2.71        12.97          30.57     8.36  2022     12   \n",
-       "155858    32.19      2.53        14.83          34.42     8.23  2022     12   \n",
-       "155859    32.19      2.32        15.59          35.52     7.60  2022     12   \n",
-       "155860    32.19      2.09        13.91          32.12     6.90  2022     12   \n",
-       "155861    33.26      1.74        10.80          26.73     5.76  2022     12   \n",
-       "\n",
-       "        day  \n",
-       "155857   31  \n",
-       "155858   31  \n",
-       "155859   31  \n",
-       "155860   31  \n",
-       "155861   31  "
+       "   SO2_conc  fine_prtcls  coarse_prtcls  ammonia  year  month  day  \n",
+       "0      6.32         9.98          21.97     6.14  2021      1    1  \n",
+       "1      6.91         7.78          18.73     6.46  2021      1    1  \n",
+       "2      6.91         5.88          15.08     6.21  2021      1    1  \n",
+       "3      5.96         4.63          12.55     5.70  2021      1    1  \n",
+       "4      4.83         3.60          10.23     5.00  2021      1    1  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_air_pollution_df.tail()"
+    "filtered_air_pollution_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "89b0775e",
+   "id": "2403c95f",
    "metadata": {},
    "outputs": [
     {
@@ -2890,7 +2883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb0f6ce4",
+   "id": "1861ea10",
    "metadata": {},
    "outputs": [],
    "source": []
